# low-latency-feed-handler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  run_benchmarks  test_order_book  test_spsc_queue
include/: feed_handler.h  order_book.h  protocol.h
scripts/: benchmarks.cpp  calc_stats.py  market_simulator.py  plot_histogram.py  run_test.sh
src/: feed_handler.cpp  main.cpp  order_book.cpp
tests/: test_order_book.cpp  test_spsc_queue.cpp
